[refactor] Added call to ControllerUtils.performActionThatMayThrowException in all controllers