@@ -2,7 +2,6 @@ package rs.chat.controllers;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -12,7 +11,6 @@ import rs.chat.domain.entity.User;
 import rs.chat.domain.service.ChatService;
 import rs.chat.domain.service.UserGroupService;
 import rs.chat.domain.service.UserService;
-import rs.chat.exceptions.BadRequestException;
 import rs.chat.net.http.HttpRequest;
 import rs.chat.net.http.HttpResponse;
 
@@ -50,11 +48,7 @@ public class ChatController {
 	@GetMapping(ALL_CHATS_OF_USER_URL)
 	public void getAllChatsOfUserDividedByType(HttpResponse response,
 	                                           @PathVariable String username) throws IOException {
-		User user = this.userService.getUser(username);
-
-		if (user == null) {
-			throw new UsernameNotFoundException("Username '%s' was not found".formatted(username));
-		}
+		User user = ControllerUtils.performActionThatMayThrowException(response, () -> this.userService.getUser(username));
 
 		response.ok().send("chats", this.chatService.getAllChatsOfUserGroupedByType(user.getId()));
 	}
@@ -70,7 +64,7 @@ public class ChatController {
 	 */
 	@GetMapping(CHAT_INFO_URL)
 	public void getChatInformation(HttpResponse response, @PathVariable Long id) throws IOException {
-		Chat chat = this.chatService.getChatById(id);
+		Chat chat = ControllerUtils.performActionThatMayThrowException(response, () -> this.chatService.getChatById(id));
 
 		HttpResponseBody body = new HttpResponseBody("name", chat.getName());
 		body.add("metadata", chat.getMetadata());
@@ -102,15 +96,18 @@ public class ChatController {
 	 */
 	@PostMapping(JOIN_CHAT_URL)
 	public void joinChat(HttpRequest request, HttpResponse response, @PathVariable String code) throws IOException {
-		if (code.isBlank()) {
-			throw new BadRequestException("Chat code cannot be empty");
+		if (code.trim().isEmpty()) {
+			response.badRequest().sendError("Chat code cannot be empty");
+			log.warn("Chat code cannot be empty");
+			return;
 		}
 
-		Chat chat = this.chatService.getChatByCode(code);
+		Chat chat = ControllerUtils.performActionThatMayThrowException(response, () -> this.chatService.getChatByCode(code));
 		Long userId = request.body().get("userId").getAsLong();
 
 		if (this.chatService.userAlreadyBelongsToChat(userId, chat.getId())) {
-			throw new BadRequestException("You are already in chat %s".formatted(chat.getName()));
+			response.badRequest().sendError("You are already in chat %s".formatted(chat.getName()));
+			return;
 		}
 
 		this.chatService.addUserToChat(userId, chat.getId());
@@ -118,7 +115,8 @@ public class ChatController {
 		// If the users join a group chat, add them to the group as well.
 		// Users can only join degree and subject chats if they are added by teachers or admins.
 		if (GROUP_CHAT.equals(chat.getType())) {
-			this.userGroupService.addUserToGroup(userId, Long.parseLong(chat.getKey().split("-")[1]));
+			String key = chat.getKey().split("-")[1];
+			this.userGroupService.addUserToGroup(userId, Long.parseLong(key));
 		}
 
 		response.status(OK).send("name", chat.getName());
